@@ -23,10 +23,6 @@
 #define MAXMODULES	50
 #define MAXHOOKTYPES	20
 
-#ifndef RTLD_NOW
-#define RTLD_NOW RTLD_LAZY
-#endif
-
 
 #ifdef _WIN32
 #define DLLFUNC	_declspec(dllexport)
